# pyke-director

./: package-lock.json  package.json
migrations/2023-09-08-131201_create_records/: up.sql
src/: App.jsx  RecordCustomEndpoint.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  main.rs  queries.rs  schema.rs
src-tauri/src/commands/: mod.rs  record_commands.rs
src-tauri/src/models/: record.rs
src-tauri/src/recorder/: error.rs  mod.rs  models.rs  process.rs
src-tauri/src/recorder/api/: endpoints.rs  models.rs
src-tauri/src/server/: mod.rs  spectator.rs
