[package]
name = "pyke-director"
version = "0.1.0"
description = "A Tauri App"
authors = ["mrdotb"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
actix-web = "4"
actix-files = "0.6.2"
chrono = { version = "0.4.24", features = ["serde"] }
diesel = { version = "2.0.0", features = ["sqlite", "chrono", "serde_json"] }
diesel_migrations = "2.0.0"
dirs = "5.0.0"
env_logger = "0.9"
libsqlite3-sys = { version = ">=0.17.2, <0.26.0", features = ["bundled"] }
log = "0.4"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.4", features = ["shell-open"] }
thiserror = "1.0.48"
tokio = { version = "1", features = ["full"] }
uuid = "1.3.1"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
mockito = "1.1.0"
env_logger = "0.9.0"
